# video-game-music-downloader

./: .gitignore  README.md  constants.py  main.py  pyproject.toml  requirements.txt  utils.py  video_game_music_downloader.py
common/: aliases.py  utils.py
download/: image.py  song.py  utils.py
parser/: album.py  page.py  song.py
src/: __init__.py
src/common/: aliases.py  constants.py  utils.py
src/download/: image.py  song.py  utils.py
src/parser/: album.py  page.py  song.py  utils.py
