[project]
name = "video-game-music-downloader"
version = "1.0.0"
description = "Download full albums from 'Video Game Music' website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "cloudscraper==1.2.71",
    "idna==3.10",
    "pathvalidate==3.2.3",
    "pyparsing==3.2.3",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "soupsieve==2.7",
    "typing-extensions==4.14.0",
    "urllib3==2.4.0",
]

[dependency-groups]
build = ["pyinstaller>=6.14.2"]
